--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 		"vscode": {
 			"extensions": [
 				"GitHub.copilot",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"MS-vsliveshare.vsliveshare"
 			]
 		}
 	}
